--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@privilegeteam/requestdto",
-  "version": "7.0.1",
+  "version": "7.0.4",
   "description": "this package is for use request DTO functionality",
   "main": "index.js",
   "publishConfig": {
@@ -18,12 +18,14 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.16.4",
+    "nodemailer": "^6.7.2",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.5.3"
   },
   "devDependencies": {
-    "@types/express": "^4.16.1"
+    "@types/express": "^4.16.1",
+    "@types/nodemailer": "^6.4.4"
   },
   "bugs": {
     "url": "https://github.com/JuanAlcalaBeMaster/-privilageteam/issues"
