--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@privilegeteam/requestdto",
-  "version": "7.0.5",
+  "version": "7.0.6",
   "description": "this package is for use request DTO functionality",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "publishConfig": {
     "access": "private"
   },
