--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "Juan David Alcala Sanchez",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.100.0",
+    "@types/sequelize": "^4.28.13",
     "axios": "^0.24.0",
     "express": "^4.16.4",
     "nodemailer": "^6.7.2",
+    "sequelize": "^6.20.1",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.5.3"
