--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@privilegeteam/requestdto",
-  "version": "7.3.0",
+  "version": "7.4.7",
   "description": "this package is for use request DTO functionality",
   "main": "./dist/index.js",
   "publishConfig": {
@@ -19,6 +19,7 @@
     "@aws-sdk/client-dynamodb": "^3.100.0",
     "axios": "^0.24.0",
     "express": "^4.16.4",
+    "luxon": "^2.4.0",
     "nodemailer": "^6.7.2",
     "sequelize": "^6.20.1",
     "ts-node-dev": "^1.1.8",
@@ -26,6 +27,7 @@
     "typescript": "^4.5.3"
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.2",
     "@types/sequelize": "^4.28.13",
     "@types/express": "^4.16.1",
     "@types/nodemailer": "^6.4.4"
