--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@privilegeteam/requestdto",
-  "version": "7.4.9",
+  "version": "7.5.2",
   "description": "this package is for use request DTO functionality",
   "main": "./dist/index.js",
   "publishConfig": {
@@ -16,7 +16,7 @@
   "author": "Juan David Alcala Sanchez",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.100.0",
+    "@aws-sdk/client-dynamodb": "3.95.0",
     "axios": "^0.24.0",
     "express": "^4.16.4",
     "luxon": "^2.4.0",
